# rtspy

./: .gitignore  MANIFEST.in  app.py  commands.py  config.py  connection.py  constants.py  device.py  filterd.py  filterd_alta.py  filterd_dummy.py  filterd_example.py  filterd_ovis.py  focusd.md  focusd.py  focusd_dummy.py  grbd.py  netman.py  pyproject.toml  queue_selector.py  queue_selector_docs.md  readme.md  rts2-queuer  rts2-value  sensor_temp.py  setup.py  value.py  voevent.py  watcher.py
rtspy/: __init__.py
rtspy/cli/: __init__.py  grbinfo.py  queuemanual.py  valuetool.py
rtspy/core/: __init__.py  app.py  commands.py  config.py  connection.py  device.py  device_caring_mixin.py  filterd.py  focusd.py  imgproc_utils.py  netman.py  value.py
rtspy/daemons/: __init__.py  grbd.py  queue_selector.py  watcher.py
rtspy/drivers/: __init__.py  filterd_dummy.py  filterd_ovis.py  focusd_dummy.py  sensor_temp.py  sensor_temp_with_caring.py
rtspy/scripts/: rts2-filterd-ovis  rts2-gcnkafka  rts2-queuer
